# HeisenbergVMCPEPS

./: .gitignore  CMakeLists.txt  README.md  package-lock.json
.cursor/rules/: baserule.mdc  compilerule.mdc
configs/: physics_params.json
docs/plans/: 2026-02-17-cluster-workflow-impl-plan.md  2026-02-17-cluster-workflow-skill-cli-design.md  2026-02-18-sr-defaults-and-run-journal-design.md  2026-02-18-sr-defaults-and-run-journal-impl-plan.md  2026-02-24-self-documenting-runs-design.md
figure/triangle/: BondEn6x24J20.eps  BondEn8x8J20.eps  BondEn8x8J20_11.eps  BondEnDMRG6x24J20D12000.eps  BondEnDMRG8x24J20_125D8000.eps  BondEnDMRG8x24J20_125D8000.fig  BondEnDMRG8x8J20D12000.eps  BondEnPEPS6x24J20D10.eps  BondEnPEPS6x24J20D8.eps  BondEnPEPS8x24J20_125D8.eps  BondEnPEPS8x8J20D10.eps  BondEnPEPS8x8J20_11D110.eps  EnComp6x6.eps  EnOpt8x8J2-0_11D10.eps  SpinCorr6x15J2=0.eps  SpinCorr6x24J2=0.eps  SpinCorr6x24J2=0_11.eps  SpinCorr6x24J2=0_125.eps  SpinCorr8x16J2=0_125.eps  SpinCorr8x24J2=0_125.eps  SpinCorr8x8J2=0.eps  SpinCorr8x8J2=0_11.eps  SpinStrucFactor10x10J=0Comp.eps  SpinStrucFactor10x10J=0DMRG.eps  SpinStrucFactor10x10J=0_125Comp.eps  SpinStrucFactor8x8J=0Comp.eps  SpinStrucFactor8x8J=0D10.eps  SpinStrucFactor8x8J=0DMRG.eps  SpinStrucFactor8x8J=0_125Comp.eps  TriangleSpins.eps
machine_test/square12x12D8vmc/: batch.sh  note.txt  physics_params.json  simple_update_params.json  vmc_algorithm_params.json  vmc_params.json
params/: loop_update_algorithm_params.json  measure_algorithm_params.json  physics_params.json  physics_square_xy.json  physics_triangle_heisenberg.json  simple_update_algorithm_params.json  vmc_adagrad.json  vmc_adam.json  vmc_algorithm_params.json  vmc_lbfgs_fixed.json  vmc_lbfgs_strong_wolfe.json  vmc_minsr.json  vmc_no_u1.json  vmc_sgd_momentum.json  vmc_sr_step_selector.json
params/quickstart/: README.md  loop_update_local_2x2_pbc.json  loop_update_local_2x2_pbc_advanced_stop.json  measure_cluster_4x4_obc_n16.json  measure_local_2x2_pbc_n1.json  physics_cluster_4x4_obc.json  physics_local_2x2_pbc.json  simple_update_cluster_4x4_obc.json  simple_update_local_2x2_pbc.json  simple_update_local_2x2_pbc_advanced_stop.json  simple_update_local_2x2_pbc_tau_schedule.json  vmc_cluster_4x4_obc_n16.json  vmc_local_2x2_pbc_n1.json
plot/: DMRGIdx2Coor.m  EnergyAutoCorrelation.eps  EnergyDecreasingHeisenberg.eps  EnergyDecreasingKagome4x12SmoothBC.eps  EnergyDecreasingKagome4x4.eps  EnergyDecreasingKagome6x6.eps  ExtractBulkEnergy.m  J1-J2EnergyDecreasing.eps  Kagome4x12D8BondEnergy.eps  Kagome4x12EnergySmoothBC.m  Kagome4x4LocalUpdateAutoCorrelation.m  Kagome6x6D20SUBondEnergy-bondwidth.eps  Kagome6x6D8SUBondEnergy-bondwidth.eps  Kagome6x6D8StuckBondEnergy-bondwidth-iPEPSStart.eps  Kagome6x6EnergyDecreasing.m  Kagome8x8EnergyDecreasing.m  PlotBondEnergy.m  PlotDMRGBondEnergy.m  PlotEnergyTrajectory.m  PlotSmoothBoundaryLattice.m  README.md  ReplicaOverlap.eps  SpinAutoCorrelation.eps  SquareHeisenberg8x8RandStepLengthSG.m  iPEPSEnergyExtrapolation.eps  negsemilogx.m
plot/kagome/: DMRGIdx2Coor.m  EnergyDecreasingKagome2x4SmoothBC.eps  EnergyDecreasingKagome4x4SmoothBC.eps  EnergyDecreasingKagome6x6.eps  EnergyDecreasingKagome6x6SmoothBC.eps  EnergyDecreasingKagome8x8.eps  ExtrapolateiPEPSEnergy.m  GenerateSmoothBoundaryLatticeCoord.m  Kagome2x4EnergySmoothBC.m  Kagome4x12DMRGBondEnergy.eps  Kagome4x4BondEnergy.eps  Kagome4x4D8BondEnergy.eps  Kagome4x4DMRGBondEnergy.eps  Kagome4x4EnergyDecreasing.m  Kagome4x4EnergySmoothBC.m  Kagome6x6D12StuckBondEnergy-bondwidth.eps  Kagome6x6D8SUBondEnergy.eps  Kagome6x6D8StuckBondEnergy-bondwidth.eps  Kagome6x6D8StuckBondEnergy.eps  Kagome6x6DMRGBondEnergy-bondwidth.eps  Kagome6x6DMRGBondEnergy.eps  Kagome6x6EnergyDecreasing.m  Kagome6x6EnergySmoothBC.m  Kagome8x8EnergyDecreasing.m  KagomeLatticeSmoothBoundary.eps  KagomeLatticeSmoothBoundaryPEPS.eps  ReplicaOverlap.m  show_measurement_smooth.m  (+1 more)
scripts/: cluster_run.py  configure_macos_llvm_sdk.sh  run_quickstart_workflow.sh  sitps_tile.py
skills/: changelog.md  vmcpeps-cluster-workflow.md
src/: common_params.h  convert_tps_to_sitps.cpp  dmrg_measure1.cpp  dmrg_my_measure.h  dmrg_params.json  enhanced_measure_params_parser.h  enhanced_params_parser.h  gqdouble.h  kagome_dmrg.cpp  kagome_dmrg_measure.cpp  kagome_hei_model_combined_tps_sample.h  kagome_mc_measure.cpp  kagome_mc_measure.h  kagome_nn_on_sqr_peps_simple_update.h  kagome_simple_update.cpp  kagome_vmc_update.cpp  loop_update.cpp  mc_measure.cpp  model_updater_factory.h  monte_carlo_measurement.h  myutil.cpp  myutil.h  params_parser.h  qlcomplex.h  qldouble.h  simple_update.cpp  simple_update_params.json  sitps_space_extension.cpp  sitps_tile.cpp  spin_onehalf_heisenberg_kagome_measurement_solver.h  spin_onehalf_heisenberg_kagome_model_sqrpeps_measurement_solver.h  spin_onehalf_heisenberg_kagome_model_sqrpeps_solver.h  spin_onehalf_planar_squareJ1J2.h  square_mc_measure.cpp  square_peps_zero_evolve.cpp  square_peps_zero_evolve_complex.cpp  square_planar_simple_update.cpp  square_planar_vmc_update.cpp  square_simple_update.cpp  square_vmc_update.cpp  (+18 more)
src_dmrg/: dmrg_my_measure.h  dmrg_params.h  kagome_dmrg.cpp  kagome_dmrg_measure.cpp  triangle_dmrg.cpp  triangle_dmrg_measure.cpp  triangle_dmrg_measure_sf.cpp  triangle_vmps.cpp
src_vmc_boost/: fluctuation_vmc_update.cpp  spin_onehalf_heisenberg_square_boost.h  spin_onehalf_wave_function_fluctuation_sqrpeps.h  square_simple_update_boost.cpp
tests/: test_cluster_run.py
tutorials/: 01-quick-start.md  02-concepts.md  02-parameter-system.md  03-parameter-reference.md  03-recipes.md  04-parameter-reference.md  05-optimizer-examples.md  05-troubleshooting.md  06-plotting-workflow.md  README.md  appendix-dmrg-benchmark.md
vmc_peps_note/: EnergyDecreasingKagome4x4.eps  EnergyDecreasingKagome6x6.eps  HeisenbergFixedStepLengthSG.m  J1J20_5EnergyDecreasing.m  Kagome4x4EnergyDecreasing.m  Kagome4x4LocalUpdateAutoCorrelation.m  Kagome6x6EnergyDecreasing.m  kagome4x4_center_configs0  kagome4x4_sum_configs0  show_measurement.m  statistic_summary
(+941 files in other folders)
